--- a/src/components/Image/index.css
+++ b/src/components/Image/index.css
@@ -97,6 +97,8 @@
 .image__placeholder {
   width: 100%;
   height: auto;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
   transition: opacity var(--durationM) ease var(--delay);
   pointer-events: none;
   display: block;
@@ -114,6 +116,8 @@
 .image__element {
   width: 100%;
   height: auto;
+  aspect-ratio: 1 / 1;
+  object-fit: cover;
   display: block;
   opacity: 0;
   grid-column: 1;
